# agibot_control_functions

./: .gitignore  README.md
aimdk/src/examples/: CMakeLists.txt
aimdk/src/py_examples/: setup.py
aimdk/src/py_examples/py_examples/: action_sequence_demo.py
deploy_policy/: run_deploy_policy.cpp
mujoco_x2/: CMakeLists.txt  README.md  package.xml  run_mujoco_x2.cpp
robots/x2/: actuator.yaml  robot_full_flat_ground_excl.xml  x2.yaml
ros_bridge/: CMakeLists.txt  README.md  package.xml  robot_ros_bridge.cpp  robot_ros_bridge.py
