<?xml version="1.0"?>
<package format="3">
  <name>ros_bridge</name>
  <version>0.0.1</version>
  <description>C++ ROS2 &lt;-&gt; text-file bridge (robot state -> sensor_txt, policy_txt -> commands).</description>
  <maintainer email="yan2@caltech.edu">ay</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>aimdk_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
